# cppminhook

./: .gitignore  CMakeLists.txt  README.md  README_EXPLINE_LIB.md
benchmarks/: benchmark_main.cpp
cmake/: CppMinHookConfig.cmake.in
examples/: api_options_example.cpp  demo.cpp
include/cppminhook/: diagnostics.h  hook.h  hook_engine.h  memory_protection.h  relocator.h  status.h  trampoline_buffer.h
src/: diagnostics.cpp  hook.cpp  hook_engine.cpp  memory_protection.cpp  relocator.cpp  status.cpp  trampoline_buffer.cpp
tests/: test_main.cpp
